<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_name"
        android:textSize="20sp"
        android:hint="@string/login_name_hint"
        android:inputType="textCapSentences"
        android:paddingLeft="12dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_id"
        android:textSize="20sp"
        android:hint="@string/login_id_hint"
        android:paddingLeft="12dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remember_me_login"
        android:textSize="20sp"
        android:text="@string/remember_me_checkbox"
        android:layout_marginBottom="12dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/btn_name"
        android:layout_gravity="center_horizontal"/>





</LinearLayout>